# api/handler/book.go
@@ -1,7 +1,7 @@
 package handler
 
 import (
-	"context"
+	"context"	
 	"errors"
 	"log"
 	"net/http"
@@ -150,7 +150,7 @@ func (h *HandlerV1) GetBookList(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Param book body models.UpdateBook true "CreateBookRequestBody"
+// @Param book body models.CreateBook true "CreateBookRequestBody"
 // @Success 200 {object} models.Book "GetBooksBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
