# api/handler/order.go
@@ -20,7 +20,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param order body models.CreateOrder true "CreateOrderRequestBody"
-// @Success 201 {object} models.Order "GetOrderBody"
+// @Success 201 {object} models.OrderBook "GetOrderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
 func (h *HandlerV1) CreateOrder(c *gin.Context) {
@@ -63,7 +63,7 @@ func (h *HandlerV1) CreateOrder(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Success 200 {object} models.Order "GetOrderBody"
+// @Success 200 {object} models.OrderBook "GetOrderBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
 func (h *HandlerV1) GetOrderById(c *gin.Context) {
@@ -150,7 +150,7 @@ func (h *HandlerV1) GetOrderList(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Param order body models.UpdateOrder true "CreateOrderRequestBody"
+// @Param order body models.OrderBook true "CreateOrderRequestBody"
 // @Success 200 {object} models.Order "GetOrdersBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
