# api/handler/user.go
@@ -150,7 +150,7 @@ func (h *HandlerV1) GetUserList(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Param actor body models.UpdateUser true "CreateUserRequestBody"
+// @Param actor body models.CreateUser true "CreateUserRequestBody"
 // @Success 200 {object} models.User "GetUsersBody"
 // @Response 400 {object} string "Invalid Argument"
 // @Failure 500 {object} string "Server Error"
