# models/user.go
@@ -2,21 +2,27 @@ package models
 
 type UserPrimarKey struct {
 	Id string `json:"user_id"`
+	Login string `json:"login"`
 }
 
 type CreateUser struct {
 	FirstName 		string `json:"first_name"`
 	LastName 		string `json:"last_name"`
+	Password		string	`json:"password`
+	Login 			string	`json:"login"` 
 	PhoneNumber 	string `json:"phone_number"`
-	Balance 		string `json:"balance"` 
+	Balance 		int64	`json:"balance"` 
 }
+	
 
 type User struct {
 	Id        		string `json:"user_id"`
 	FirstName    	string `json:"first_name"`
 	LastName 		string `json:"last_name"`
+	Login 			string	`json:"login"` 
+	Password		string	`json:"password`
 	PhoneNumber 	string `json:"phone_number"`
-	Balance 		string `json:"balance"`
+	Balance 		int64    `json:"balance"`
 	CreatedAt   	string `json:"created_at"`
 	UpdatedAt   	string `json:"updated_at"`
 }
@@ -25,8 +31,10 @@ type UpdateUser struct {
 	Id          	string `json:"user_id"`
 	FirstName    	string `json:"first_name"`
 	LastName 		string `json:"last_name"`
+	Login 			string	`json:"login"` 
+	Password		string	`json:"password`
 	PhoneNumber 	string `json:"phone_number"`
-	Balance 		string `json:"balance"`  
+	Balance 		int64  `json:"balance"`  
 }
 
 type GetListUserRequest struct {
